--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-community/slider": "^4.5.0",
     "@react-navigation/native": "^6.0.2",
     "@types/react-native-snap-carousel": "^3.8.10",
     "expo": "~50.0.3",
+    "expo-av": "~13.10.4",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.5",
@@ -24,6 +26,7 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.1",
+    "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,15 +35,15 @@
     "react-native-screens": "~3.29.0",
     "react-native-track-player": "^4.0.1",
     "react-native-web": "~0.19.6",
-    "tailwindcss": "3.3.2",
     "react-native-webview": "13.6.4",
-    "expo-av": "~13.10.4"
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.1",
+    "prettier": "3.2.4",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
