--- a/package.json
+++ b/package.json
@@ -13,37 +13,39 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
-    "@react-native-community/slider": "^4.5.0",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/slider": "4.5.2",
     "@react-navigation/native": "^6.0.2",
     "@types/react-native-snap-carousel": "^3.8.10",
-    "expo": "~50.0.3",
-    "expo-av": "~13.10.4",
-    "expo-font": "~11.10.2",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.5",
-    "expo-splash-screen": "~0.26.3",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.1",
+    "expo": "~51.0.31",
+    "expo-av": "~14.0.7",
+    "expo-font": "~12.0.9",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.23",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "expo-web-browser": "~13.0.3",
     "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-pulse": "^1.0.7",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-track-player": "^4.0.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-track-player": "^4.1.1",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.6.4",
+    "react-native-webview": "13.8.6",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@babel/core": "^7.24.0",
+    "@types/react": "~18.2.79",
     "jest": "^29.2.1",
-    "jest-expo": "~50.0.1",
+    "jest-expo": "~51.0.4",
     "prettier": "3.2.4",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
