--- a/app.json
+++ b/app.json
@@ -21,13 +21,15 @@
         "UIBackgroundModes": [
           "audio"
         ]
-      }
+      },
+      "bundleIdentifier": "com.bala.url.radioromaniaonline"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.bala.url.radioromaniaonline"
     },
     "web": {
       "bundler": "metro",
@@ -40,6 +42,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "1d14b29e-5aa8-4d62-a11c-1df1222e5909"
+      }
     }
   }
 }
