--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-native-snap-carousel": "^3.8.10",
     "expo": "~51.0.31",
     "expo-av": "~14.0.7",
+    "expo-dev-client": "~4.0.25",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -37,6 +38,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-track-player": "^4.1.1",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.8.6",
     "tailwindcss": "3.3.2"
