--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Romania Online",
-    "slug": "radiococojumbo",
+    "slug": "radioromaniaonline",
     "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
