--- a/app.json
+++ b/app.json
@@ -29,6 +29,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "permissions": ["WAKE_LOCK"],
       "package": "com.bala.url.radioromaniaonline"
     },
     "web": {
