--- a/app.json
+++ b/app.json
@@ -17,6 +17,7 @@
       "**/*"
     ],
     "ios": {
+      "buildNumber": "1.0.4",
       "supportsTablet": true,
       "infoPlist": {
         "UIBackgroundModes": [
