--- a/package.json
+++ b/package.json
@@ -14,38 +14,40 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-community/slider": "4.5.2",
+    "@react-native-community/slider": "4.5.5",
     "@react-navigation/native": "^6.0.2",
+    "@supabase/supabase-js": "^2.48.1",
     "@types/react-native-snap-carousel": "^3.8.10",
-    "expo": "~51.0.31",
-    "expo-av": "~14.0.7",
-    "expo-dev-client": "~4.0.25",
-    "expo-font": "~12.0.9",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "expo": "52.0.0",
+    "expo-av": "~15.0.2",
+    "expo-dev-client": "~5.0.12",
+    "expo-font": "~13.0.3",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.29.22",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.8",
+    "expo-web-browser": "~14.0.2",
     "moment": "^2.30.1",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-pulse": "^1.0.7",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-track-player": "^4.1.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.8.6",
+    "react-native-webview": "13.12.5",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@types/react": "~18.2.79",
+    "@types/react-native": "^0.72.8",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.4",
     "prettier": "3.2.4",
